Logout logic worked out

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ code {
   display: flex;
   color: var(--white);
   background: linear-gradient(to bottom left,#216e93,#21648a,#1f5881,#172d5b,#191c51);
+  position: relative;
 }
 
 #logo{
